[package]
name = "lorry-cli"
version = "0.1.4"
edition = "2018"
build = "spec.rs"
author = "Jakob Neufeld"
authors = ["Jakob Neufeld"]
license = "MIT"
readme = "Readme.md"
description = "A cli for lorry"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build_dependencies]
lorry = "0.1.5"
[dependencies]
clap = "2.33.3"
git2 = "0.13.15"
ansi_term = "0.12.1"
dirs = "3.0.1"
indicatif = "0.15.0"
